<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content" 
        >
 
<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/distance"
    android:textSize="10pt" >

</TextView>
 <EditText
    android:id="@+id/EditTextName"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    android:inputType="text"
    android:layout_width="fill_parent">
    <requestFocus />
</EditText>

 <EditText
     android:id="@+id/editTextUnit"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/unit"
     android:inputType="text" >

     
 </EditText>

 <GridView
     android:id="@+id/gridDistancesEdit"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
     android:background="@color/white"
     android:columnWidth="40dp"
     android:horizontalSpacing="1dip"
     android:listSelector="@android:color/transparent"
     android:numColumns="auto_fit"
     android:paddingLeft="1dip"
     android:paddingTop="1dip"
     android:stretchMode="columnWidth"
     android:verticalSpacing="1dip" >
 </GridView>

<Space
    android:layout_width="match_parent"
    android:layout_height="12sp"         android:layout_margin="1dp"
    />
 
 <EditText
     android:id="@+id/editTextComment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/comment"
     android:lines="5"
     android:inputType="textMultiLine"  />
 
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >

 <Button
    android:id="@+id/okbutton"
    android:layout_height="fill_parent"
    android:text="@string/ok"
    android:onClick="onClick"
    android:layout_width="wrap_content">
</Button>

<Button
    android:id="@+id/cancelbutton"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:onClick="onClick"
    android:text="@string/cancel" >

</Button>
 </LinearLayout>
 
    </LinearLayout>
