<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/materiel"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sn"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:inputType="textMultiLine"
            android:lines="5" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/okbutton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:text="@string/ok" >
            </Button>

            <Button
                android:id="@+id/cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:text="@string/cancel" >
            </Button>

            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="Photo" />
        </LinearLayout>

      <ImageView
          android:id="@+id/imageMateriel"
          android:layout_width="fill_parent"
          android:layout_height="300dp"
          android:layout_gravity="center_horizontal"
          android:src="@android:drawable/sym_def_app_icon" />

    </LinearLayout>

</ScrollView>